# Local-AI-TTS-Batch-Renderer

./: .gitignore  AGENTS.md  BACKLOG.md  README.md  REQUESTED_CHANGES.md  md_to_audio.py  pyproject.toml  repair_epub_output.py  requirements-dev.txt  requirements.txt  run_tts_batch.py
.github/workflows/: ci.yml
scripts/: doctor.py  recover-after-abort.ps1  setup-defender-exclusions.ps1  setup.ps1  setup.sh  start-batch.ps1  start-batch.sh  start.ps1  start.sh
src/local_tts_renderer/: __init__.py  chunking.py  cli.py  cli_audio_utils.py  cli_cache.py  cli_chunking_utils.py  cli_core.py  cli_entry.py  cli_models.py  cli_parsing.py  cli_presentation.py  cli_render_flow.py  cli_runtime.py  defaults.py  document_helpers.py  input_parsers.py  providers.py  render.py  scheduler.py  scheduler_args.py  scheduler_core.py  scheduler_jobs.py  scheduler_logging.py  scheduler_process.py  scheduler_runtime.py  scheduler_setup.py  scheduler_types.py
src/local_tts_renderer/sources/: __init__.py  epub.py  (+5 more)
tests/: conftest.py  test_architecture_boundaries.py  test_chunking_snapshot.py  test_cli_core_units.py  test_cli_partial_resume.py  test_cli_resume_paths.py  test_coverage_gaps.py  test_input_parsers_unit.py  test_manifest_fixtures.py  test_manifest_regression.py  test_module_wrappers.py  test_providers.py  test_scheduler_args_process_logging.py  test_scheduler_core_main.py  test_scheduler_jobs_extra.py  test_scheduler_logic.py  test_scheduler_runtime_flow.py  test_scheduler_runtime_light.py  test_sources.py
tests/snapshots/: manifest_order_epub.json  manifest_order_md.json
