[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-tts-renderer"
version = "0.0.0"
description = "Local AI TTS batch renderer"
requires-python = ">=3.11"

[project.scripts]
local-tts-render = "local_tts_renderer.cli:main"
local-tts-batch = "local_tts_renderer.scheduler:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
